name:                hen
version:             0.1.0.0
synopsis:            Haskell website generator
description:         Please see README.md
homepage:            https://github.com/soupi/hen#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Gil Mizrahi
maintainer:          gilmi@posteo.net
copyright:           2020 Gil Mizrahi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     _site/static/css/normalize.css
                     _site/static/css/style.css

library
  hs-source-dirs:      src
  exposed-modules:     Web.Hen
                       Web.Hen.Run
                       Web.Hen.Html
                       Web.Hen.Config
                       Web.Hen.Reader
                       Web.Hen.Types

  ghc-options:         -Wall -fno-warn-type-defaults
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     -- html
                     , lucid
                     -- handling configurations
                     , configurator
                     -- time handling
                     , time
                     -- render event as markdown
                     , cheapskate
                     , cheapskate-lucid
                     -- utils
                     , bytestring
                     , text
                     , shelly
                     , filepath
                     , directory
                     , optparse-applicative

  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , ViewPatterns
                     , ScopedTypeVariables
                     , RecordWildCards
                     , NamedFieldPuns
                     , TupleSections
                     , DeriveFunctor
                     , DeriveGeneric
                     , EmptyDataDecls

executable hen
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , hen

